# VideoConverter

./: .gitignore  converter.py  exceptions.py  logger.py  pyproject.toml  requirements.txt  vconverter.py
src/: exceptions.py  logger.py  vconverter.py
