[tool.poetry]
name = "videoconverter"
version = "0.1.0"
description = "Convert a video file to .mp4"
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
colorama = "~0.4.4"
ffmpy = "~0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
